[package]
name = "analog_risvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-subscriber = {version = "0.3.15",features = ["env-filter","std"]}
chrono = "0.4.22"